bk_ida/gccida/g2/find_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1458:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v7; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1479:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v28; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1480:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v29; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1485:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v34; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1486:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v35; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1493:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v42; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1494:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v43; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1523:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v72; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1524:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v73; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1551:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+38h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1556:27: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v6 = *( int *)( ( char *)&allocno_0->reg + v5); 
                          ^~~~~~~~~
                          allocno
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1562:15: error: use of undeclared identifier 'allocno_0'
v8 = ( char *)allocno_0 + v5; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1563:78: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v9 = *( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[*( int *)( ( char *)&allocno_0->reg + v5)] + 2); 
                                                                             ^~~~~~~~~
                                                                             allocno
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1588:38: error: use of undeclared identifier 'machine_mode'
if ( ix86_hard_regno_mode_ok( v15, ( machine_mode)v9) ) 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1597:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[( int)v9] - 5) > 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1656:7: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v21 = allocno_0; 
      ^~~~~~~~~
      allocno
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1657:16: error: use of undeclared identifier 'allocno_0'
v22 = ( char *)allocno_0 + v89; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1660:43: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v24 = *( HARD_REG_ELT_TYPE *)( ( _BYTE *)&allocno_0->hard_reg_copy_preferences + v89) & ~v13; 
                                          ^~~~~~~~~
                                          allocno
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:1661:36: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
*( HARD_REG_ELT_TYPE *)( ( char *)&allocno_0->hard_reg_copy_preferences + v89) = v24; 
                                   ^~~~~~~~~
                                   allocno
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reg/src/obj/global.o] Error 1
